--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+@import "primeicons/primeicons.css";
+
+* {
+  box-sizing: border-box !important;
+}
+
+html, body{
+  width: 100vw;
+  height: 100vh;
+}
+
+p-divider{
+  margin: 0 !important;
+  padding: 0 !important;
+}
