--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,169 @@
-<main class="w-full h-full flex flex-col bg-gray-100">
-  <header class="bg-blue-600 text-white p-4 shadow-2xl">
-    <div class="container mx-auto flex items-center justify-between">
-      <h1 class="text-3xl font-semibold capitalize">{{pokemonName ?? 'Pokémon List'}}</h1>
-      <p-button *ngIf="pokemonName" icon="pi pi-arrow-left" [outlined]="true" routerLink="/pokemon-list/"/>
-    </div>
-  </header>
-  <section class="h-full w-full overflow-auto ">
-    <router-outlet></router-outlet>
-  </section>
-</main>
+<!doctype html>
+<html lang="en" data-beasties-container>
+<head>
+  <meta charset="utf-8">
+  <title>PokeDexSbg</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    @-webkit-keyframes fa-spin {
+      0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0)
+      }
+
+      to {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg)
+      }
+    }
+
+    @layer theme {
+      :root {
+        --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+        --color-blue-600: oklch(.546 .245 262.881);
+        --color-gray-100: oklch(.967 .003 264.542);
+        --color-white: #fff;
+        --spacing: .25rem;
+        --text-2xl: 1.5rem;
+        --text-2xl--line-height: calc(2 / 1.5);
+        --text-3xl: 1.875rem;
+        --text-3xl--line-height: 1.2 ;
+        --text-5xl: 3rem;
+        --text-5xl--line-height: 1;
+        --font-weight-semibold: 600;
+        --radius-md: .375rem;
+        --radius-2xl: 1rem;
+        --default-font-family: var(--font-sans);
+        --default-font-feature-settings: var(--font-sans--font-feature-settings);
+        --default-font-variation-settings: var( --font-sans--font-variation-settings );
+        --default-mono-font-family: var(--font-mono);
+        --default-mono-font-feature-settings: var( --font-mono--font-feature-settings );
+        --default-mono-font-variation-settings: var( --font-mono--font-variation-settings )
+      }
+    }
+
+    @layer base {
+      *,:after,:before {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        border: 0 solid
+      }
+
+      html {
+        line-height: 1.5;
+        -webkit-text-size-adjust: 100%;
+        tab-size: 4;
+        font-family: var(--default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
+        font-feature-settings: var(--default-font-feature-settings, normal);
+        font-variation-settings: var(--default-font-variation-settings, normal);
+        -webkit-tap-highlight-color: transparent
+      }
+
+      body {
+        line-height: inherit
+      }
+    }
+
+    * {
+      box-sizing: border-box!important
+    }
+
+    html,body {
+      width: 100vw;
+      height: 100vh
+    }
+
+    @property --tw-border-style {
+      syntax: "*";
+      inherits: false;
+      initial-value: solid;
+    }
+
+    @property --tw-font-weight {
+      syntax: "*";
+      inherits: false;
+    }
+
+    @property --tw-shadow {
+      syntax: "*";
+      inherits: false;
+      initial-value: 0 0 #0000;
+    }
+
+    @property --tw-shadow-color {
+      syntax: "*";
+      inherits: false;
+    }
+
+    @property --tw-inset-shadow {
+      syntax: "*";
+      inherits: false;
+      initial-value: 0 0 #0000;
+    }
+
+    @property --tw-inset-shadow-color {
+      syntax: "*";
+      inherits: false;
+    }
+
+    @property --tw-ring-color {
+      syntax: "*";
+      inherits: false;
+    }
+
+    @property --tw-ring-shadow {
+      syntax: "*";
+      inherits: false;
+      initial-value: 0 0 #0000;
+    }
+
+    @property --tw-inset-ring-color {
+      syntax: "*";
+      inherits: false;
+    }
+
+    @property --tw-inset-ring-shadow {
+      syntax: "*";
+      inherits: false;
+      initial-value: 0 0 #0000;
+    }
+
+    @property --tw-ring-inset {
+      syntax: "*";
+      inherits: false;
+    }
+
+    @property --tw-ring-offset-width {
+      syntax: "<length>";
+      inherits: false;
+      initial-value: 0px;
+    }
+
+    @property --tw-ring-offset-color {
+      syntax: "*";
+      inherits: false;
+      initial-value: #fff;
+    }
+
+    @property --tw-ring-offset-shadow {
+      syntax: "*";
+      inherits: false;
+      initial-value: 0 0 #0000;
+    }
+  </style>
+  <link rel="stylesheet" href="styles-SBXAL7RF.css" media="print" onload="this.media='all'">
+  <noscript>
+    <link rel="stylesheet" href="styles-SBXAL7RF.css">
+  </noscript>
+</head>
+<body>
+<app-root></app-root>
+<link rel="modulepreload" href="chunk-XF4YRBHL.js">
+<script src="polyfills-FFHMD2TL.js" type="module"></script>
+<script src="main-IK4E7WBM.js" type="module"></script>
+</body>
+</html>
